fix navbar overlap issue, make admin grievances responsive

--- a/src/Components/Admin/Grievances/Grievances.css
+++ b/src/Components/Admin/Grievances/Grievances.css
@@ -1,84 +1,61 @@
-.grievances-main {
+.grievances-admin-main {
   display: flex;
   background-color: var(--light-blue-bg);
 }
 
-#grievances-container {
-  position: absolute;
-  left: 300px;
-  width: 1100px;
+#grievances-admin-container {
+  padding: 3.5rem 5rem 0rem 4.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.dtitle {
-  position: absolute;
-  width: 117px;
-  height: 28px;
-  left: 76px;
-  top: 57px;
-
+.grievances-admin-title {
   font-weight: 500;
-  font-size: 24px;
-  line-height: 28px;
-
+  font-size: 1.5rem;
   color: #132f5e;
 }
 
-.overview {
-  position: absolute;
-  width: 74px;
-  height: 21px;
-  left: 76px;
-  top: 128px;
-
+.grievances-admin-overview {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.2rem;
   color: #132f5e;
 }
 
-.total-investors {
-  position: absolute;
-  width: 191px;
-  height: 16px;
-  left: 76px;
-  top: 174px;
-
+.grievances-admin-total-investors {
+  margin-top: 1rem;
   font-weight: 300;
-  font-size: 14px;
-  line-height: 16px;
-
+  font-size: 0.9rem;
   color: #132f5e;
 }
 
-.total-no {
-  position: absolute;
-  width: 28px;
-  height: 28px;
-  left: 76px;
-  top: 200px;
-
+.grievances-admin-total-no {
   font-weight: 500;
-  font-size: 24px;
-  line-height: 28px;
-
+  font-size: 1.5rem;
   color: #132f5e;
 }
 
-.inv-btns {
-  position: absolute;
-  left: 76px;
-  top: 240px;
-  width: 1100px;
+.gr-ad-inv-btns {
   display: flex;
   height: 60px;
   align-items: flex-end;
   justify-content: space-between;
 }
 
-.inv-table-grievances {
-  position: absolute;
-  width: 1100px;
+.gr-ad-inv-table-grievances {
+  max-width: 80vw;
   /* overflow: auto; */
-  top: 300px;
-  left: 78px;
+}
+
+@media screen and (max-width: 768px) {
+  .grievances-admin-main {
+    flex-direction: column;
+  }
+  #grievances-admin-container {
+    margin-top: -90vh;
+  }
+  .gr-ad-inv-table-grievances {
+    /* max-width: 100%; */
+    /* overflow: auto; */
+  }
 }
