--- a/src/Components/User/Navbar/Navbar.css
+++ b/src/Components/User/Navbar/Navbar.css
@@ -7,6 +7,7 @@
   align-items: center;
   background-color: #fff;
   box-shadow: 3px 0px 6px 1px #0000001a;
+  position: relative;
   z-index: 9;
 }
 #header-logo {
